[project]
name = "cam-viewer"
version = "0.0.1"
authors = [
  { name="Amadeus (Wasys)", email="" },
]
description = "Python library for viewing cameras"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Vasysik/cam-viewer"
Issues = "https://github.com/Vasysik/cam-viewer/issues"